--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
-    "vercel:deploy": "vercel --prod"
+    "vercel:deploy": "vercel --prod",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^7.0.1",
     "@react-pdf/renderer": "^4.3.1",
     "@vercel/blob": "^2.0.0",
     "@vercel/postgres": "^0.10.0",
@@ -18,6 +20,7 @@
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
+    "prisma": "^7.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0"
