--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && prisma db push --accept-data-loss && next build",
     "start": "next start",
     "lint": "eslint",
-    "vercel:deploy": "vercel --prod",
-    "postinstall": "prisma generate"
+    "vercel:deploy": "vercel --prod"
   },
   "dependencies": {
     "@prisma/client": "^7.0.1",
